@@ -51,6 +51,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.math.BigInteger;
 import java.util.*;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
@@ -133,7 +134,7 @@ public class ApplicationFormServiceImpl implements ApplicationFormService {
         // 동일한 우편번호가 없으면? -> 생성
         Region region = qRegionRepository.findRegionByZipcodeAndCountyAndVillage(createRequestDto.getZipcode(), createRequestDto.getCounty(), createRequestDto.getVillage());
         if(region == null) throw new ApiException(ExceptionEnum.NOT_FOUND_REGION);
-        RequestedMySpotZones requestedMySpotZones = requestedMySpotZonesMapper.toRequestedMySpotZones(createRequestDto.getWaitingUserCount(), createRequestDto.getMemo(), region, null);
+        RequestedMySpotZones requestedMySpotZones = requestedMySpotZonesMapper.toRequestedMySpotZones(0, createRequestDto.getMemo(), region, null);
         requestedMySpotZonesRepository.save(requestedMySpotZones);
     }
 
@@ -145,7 +146,8 @@ public class ApplicationFormServiceImpl implements ApplicationFormService {
 
         Region region = qRegionRepository.findRegionByZipcodeAndCountyAndVillage(requestedMySpotDetailDto.getZipcode(), requestedMySpotDetailDto.getCounty(), requestedMySpotDetailDto.getVillage());
         if(region == null) throw new ApiException(ExceptionEnum.NOT_FOUND_REGION);
-        existRequestedMySpotZones.updateRequestedMySpotZones(requestedMySpotDetailDto, region);
+        requestedMySpotZonesMapper.updateRequestedMySpotZoneFromRequest(requestedMySpotDetailDto, existRequestedMySpotZones);
+        existRequestedMySpotZones.updateRegion(region);
     }
 
     @Override
@@ -164,7 +166,12 @@ public class ApplicationFormServiceImpl implements ApplicationFormService {
     @Transactional
     public void createMySpotZonesFromRequest(List<BigInteger> ids) {
         List<RequestedMySpotZones> existRequestedMySpotZones = qRequestedMySpotZonesRepository.findRequestedMySpotZonesByIds(ids);
-        List<BigInteger> pushAlarmUserIds = existRequestedMySpotZones.stream().flatMap(v -> v.getPushAlarmUserIds().stream()).toList();
+        List<BigInteger> pushAlarmUserIds = existRequestedMySpotZones.stream()
+                .flatMap(requestedMySpotZones -> {
+                    List<BigInteger> alarmUserIds = requestedMySpotZones.getPushAlarmUserIds();
+                    return alarmUserIds != null ? alarmUserIds.stream() : Stream.empty();
+                })
+                .collect(Collectors.toList());
 
         // 마이스팟 생성
         MySpotZone mySpotZone = mySpotZoneMapper.toMySpotZone(existRequestedMySpotZones);
@@ -204,8 +211,6 @@ public class ApplicationFormServiceImpl implements ApplicationFormService {
         requestedMySpotRepository.deleteAll(requestedMySpots);
         requestedMySpotZonesRepository.deleteAll(existRequestedMySpotZones);
 
-        applicationSlackUtil.sendSlack("[마이스팟] 신청 내역이 있어요!");
-
     }
 
     @Override
@@ -221,8 +226,6 @@ public class ApplicationFormServiceImpl implements ApplicationFormService {
     public void createShareSpotRequest(ShareSpotDto.AdminRequest request) throws ParseException {
         RequestedShareSpot requestedShareSpot = requestedShareSpotMapper.toEntity(request);
         requestedShareSpotRepository.save(requestedShareSpot);
-
-        applicationSlackUtil.sendSlack("[공유스팟] 신청 내역이 있어요!");
 
     }
 
@@ -259,12 +262,11 @@ public class ApplicationFormServiceImpl implements ApplicationFormService {
             Optional<RequestedMySpotZones> requestedMySpotZone = requestedMySpotZones.stream().filter(v -> mySpotZones.get(mySpotZone).contains(v.getRegion().getZipcode())).findAny();
             requestedMySpotZone.ifPresent(v -> {
 
-                List<BigInteger> userIds = v.getPushAlarmUserIds();
+                List<BigInteger> userIds = v.getPushAlarmUserIds() == null || v.getPushAlarmUserIds().isEmpty() ? null : v.getPushAlarmUserIds();
                 List<MySpot> mySpots = mySpotMapper.toEntityList(mySpotZone, v.getRequestedMySpots(), userIds);
                 spotRepository.saveAll(mySpots);
 
                 createUserGroupAndUserSpot(v.getRequestedMySpots(), mySpotZone, mySpots);
-
 
                 deleteRequestedMySpot.addAll(v.getRequestedMySpots());
             });
