@@ -1,14 +1,19 @@
 package co.dalicious.domain.delivery.mappper;
 
 import co.dalicious.domain.client.entity.CorporationSpot;
-import co.dalicious.domain.client.entity.MySpot;
+import co.dalicious.domain.client.entity.Group;
 import co.dalicious.domain.client.entity.OpenGroupSpot;
 import co.dalicious.domain.client.entity.Spot;
 import co.dalicious.domain.client.entity.enums.GroupDataType;
+import co.dalicious.domain.delivery.dto.DeliveryInstanceDto;
 import co.dalicious.domain.delivery.entity.DailyFoodDelivery;
 import co.dalicious.domain.delivery.entity.DeliveryInstance;
+import co.dalicious.domain.food.dto.DeliveryInfoDto;
 import co.dalicious.domain.food.entity.DailyFood;
 import co.dalicious.domain.food.entity.Food;
+import co.dalicious.domain.food.entity.FoodCapacity;
+import co.dalicious.domain.food.entity.Makers;
+import co.dalicious.domain.food.util.FoodUtils;
 import co.dalicious.domain.order.dto.OrderDailyFoodByMakersDto;
 import co.dalicious.domain.order.dto.ServiceDiningDto;
 import co.dalicious.domain.order.entity.OrderDailyFood;
@@ -16,23 +21,57 @@ import co.dalicious.domain.order.entity.OrderItemDailyFood;
 import co.dalicious.domain.order.entity.enums.OrderStatus;
 import co.dalicious.system.enums.DiningType;
 import co.dalicious.system.util.DateUtils;
+import exception.ApiException;
+import exception.ExceptionEnum;
 import org.hibernate.Hibernate;
 import org.mapstruct.Mapper;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
 
-import javax.swing.text.html.Option;
+import javax.transaction.Transactional;
+import java.time.LocalDateTime;
 import java.time.LocalTime;
+import java.time.ZoneId;
 import java.util.*;
 import java.util.stream.Collectors;
 
-@Mapper(componentModel = "spring")
+@Mapper(componentModel = "spring", imports = {DateUtils.class, FoodUtils.class})
 public interface DeliveryInstanceMapper {
+    default List<DeliveryInstance> toEntities(DeliveryInstanceDto deliveryInstanceDto, List<Makers> makers, List<Group> groups) {
+        List<DeliveryInstance> deliveryInstances = new ArrayList<>();
+        Group group = groups.stream().filter(v -> v.getName().equals(deliveryInstanceDto.getGroupName())).findAny().orElseThrow(() -> new ApiException(ExceptionEnum.GROUP_NOT_FOUND));
+        for (String makersName : deliveryInstanceDto.getMakersNames()) {
+            Makers maker = makers.stream().filter(v -> v.getName().equals(makersName)).findAny().orElseThrow(() -> new ApiException(ExceptionEnum.NOT_MATCHED_MAKERS));
+            if(group.getSpots().size() > 1) {
+                for (Spot spot : group.getSpots()) {
+                    deliveryInstances.add(DeliveryInstance.builder()
+                            .serviceDate(DateUtils.stringToDate(deliveryInstanceDto.getDeliveryDate()))
+                            .deliveryTime(DateUtils.stringToLocalTime(deliveryInstanceDto.getDeliveryTime()))
+                            .diningType(DiningType.ofString(deliveryInstanceDto.getDiningType()))
+                            .orderNumber(null) // TODO: MySpot 구현 필요
+                            .makers(maker)
+                            .spot(spot)
+                            .build());
+                }
+            } else  {
+                deliveryInstances.add(DeliveryInstance.builder()
+                        .serviceDate(DateUtils.stringToDate(deliveryInstanceDto.getDeliveryDate()))
+                        .deliveryTime(DateUtils.stringToLocalTime(deliveryInstanceDto.getDeliveryTime()))
+                        .diningType(DiningType.ofString(deliveryInstanceDto.getDiningType()))
+                        .orderNumber(null)
+                        .makers(maker)
+                        .spot(group.getSpots().get(0))
+                        .build());
+            }
+
+        }
+        return deliveryInstances;
+    }
+
     default DeliveryInstance toEntity(DailyFood dailyFood, Spot spot, Integer orderNumber, LocalTime deliveryTime) {
         return DeliveryInstance.builder()
                 .serviceDate(dailyFood.getServiceDate())
                 .deliveryTime(deliveryTime)
-                .pickUpTime(deliveryTime.minusMinutes(30))
                 .diningType(dailyFood.getDiningType())
                 .orderNumber(orderNumber)
                 .makers(dailyFood.getFood().getMakers())
@@ -40,7 +79,8 @@ public interface DeliveryInstanceMapper {
                 .build();
     }
 
-    default OrderDailyFoodByMakersDto.ByPeriod toDto(List<DeliveryInstance> deliveryInstances) {
+
+    default OrderDailyFoodByMakersDto.ByPeriod toDto(List<DeliveryInstance> deliveryInstances, List<FoodCapacity> foodCapacities) {
         OrderDailyFoodByMakersDto.ByPeriod byPeriod = new OrderDailyFoodByMakersDto.ByPeriod();
 
         // 1. 메이커스 음식별 개수 및 상세정보
@@ -48,17 +88,17 @@ public interface DeliveryInstanceMapper {
         byPeriod.setTotalFoods(foods);
 
         // 2. 메이커스 기간별 음식 개수
-        List<OrderDailyFoodByMakersDto.FoodByDateDiningType> foodByDateDiningTypes = toFoodByDateDiningType(deliveryInstances);
+        List<OrderDailyFoodByMakersDto.FoodByDateDiningType> foodByDateDiningTypes = toFoodByDateDiningType(deliveryInstances, foodCapacities);
         byPeriod.setFoodByDateDiningTypes(foodByDateDiningTypes);
 
         // 3. 고객사별 식사일정
-        List<OrderDailyFoodByMakersDto.DeliveryGroupsByDate> deliveryGroupsByDates = toDeliveryGroupsByDate(deliveryInstances);
+        List<OrderDailyFoodByMakersDto.DeliveryGroupsByDate> deliveryGroupsByDates = toDeliveryGroupsByDate(deliveryInstances, foodCapacities);
         byPeriod.setDeliveryGroupsByDates(deliveryGroupsByDates);
 
         return byPeriod;
     }
 
-    default List<OrderDailyFoodByMakersDto.DeliveryGroupsByDate> toDeliveryGroupsByDate(List<DeliveryInstance> deliveryInstances) {
+    default List<OrderDailyFoodByMakersDto.DeliveryGroupsByDate> toDeliveryGroupsByDate(List<DeliveryInstance> deliveryInstances, List<FoodCapacity> foodCapacities) {
         List<OrderDailyFoodByMakersDto.DeliveryGroupsByDate> deliveryGroupsByDates = new ArrayList<>();
         MultiValueMap<ServiceDiningDto, DeliveryInstance> deliveryGroupsByDatesMap = new LinkedMultiValueMap<>();
         for (DeliveryInstance deliveryInstance : deliveryInstances) {
@@ -72,6 +112,12 @@ public interface DeliveryInstanceMapper {
             deliveryGroupsByDate.setDiningType(serviceDiningDto.getDiningType().getDiningType());
             deliveryGroupsByDate.setSpotCount(deliveryGroupsByDatesMap.get(serviceDiningDto).stream().map(DeliveryInstance::getSpot).collect(Collectors.toSet()).size());
             deliveryGroupsByDate.setDeliveryGroups(toDeliveryGroups(deliveryInstances));
+
+            LocalDateTime lastOrderTime = FoodUtils.getLastOrderTime(deliveryGroupsByDatesMap.get(serviceDiningDto).get(0).getMakers(), serviceDiningDto.getDiningType(), serviceDiningDto.getServiceDate(), foodCapacities);
+            deliveryGroupsByDate.setLastOrderTime(DateUtils.localDateTimeToString(lastOrderTime));
+            if(lastOrderTime.isAfter(LocalDateTime.now(ZoneId.of("Asia/Seoul")))) deliveryGroupsByDate.setBeforeLastOrderTime(false);
+            deliveryGroupsByDate.setBeforeLastOrderTime(true);
+
             deliveryGroupsByDates.add(deliveryGroupsByDate);
         }
 
@@ -87,13 +133,13 @@ public interface DeliveryInstanceMapper {
         MultiValueMap<LocalTime, DeliveryInstance> itemsByTime = new LinkedMultiValueMap<>();
         List<OrderDailyFoodByMakersDto.DeliveryGroups> deliveryGroupsList = new ArrayList<>();
         for (DeliveryInstance deliveryInstance : deliveryInstances) {
-            itemsByTime.add(deliveryInstance.getDeliveryTime(), deliveryInstance);
+            itemsByTime.add(deliveryInstance.getPickupTime(deliveryInstance.getDeliveryTime()), deliveryInstance);
         }
         for (LocalTime localTime : itemsByTime.keySet()) {
             OrderDailyFoodByMakersDto.DeliveryGroups deliveryGroups = new OrderDailyFoodByMakersDto.DeliveryGroups();
             // FIXME: OrderItemDailyFood에 LocalTime이 없을 경우?
             List<OrderDailyFoodByMakersDto.FoodBySpot> foodBySpots = toFoodBySpot(itemsByTime.get(localTime));
-            deliveryGroups.setDeliveryTime(DateUtils.timeToString(localTime));
+            deliveryGroups.setPickUpTime(DateUtils.timeToString(localTime));
             deliveryGroups.setFoods(toFood(itemsByTime.get(localTime)));
             deliveryGroups.setFoodCount(deliveryGroups.getFoodCount());
             deliveryGroups.setFoodBySpots(foodBySpots);
@@ -101,8 +147,8 @@ public interface DeliveryInstanceMapper {
             deliveryGroupsList.add(deliveryGroups);
         }
         deliveryGroupsList = deliveryGroupsList.stream()
-                .sorted(Comparator.comparing(OrderDailyFoodByMakersDto.DeliveryGroups::getDeliveryTime))
-                .toList();
+                .sorted(Comparator.comparing(v -> (v.getPickUpTime() != null ? LocalTime.parse(v.getPickUpTime()) : LocalTime.MIN), Comparator.nullsLast(LocalTime::compareTo)))
+                .collect(Collectors.toList());
         return deliveryGroupsList;
     }
 
@@ -139,31 +185,38 @@ public interface DeliveryInstanceMapper {
     }
 
     default List<OrderDailyFoodByMakersDto.FoodBySpot> toFoodBySpot(List<DeliveryInstance> deliveryInstances) {
+        MultiValueMap<LocalTime, DeliveryInstance> deliveryMap = new LinkedMultiValueMap<>();
         List<OrderDailyFoodByMakersDto.FoodBySpot> foodBySpots = new ArrayList<>();
         for (DeliveryInstance deliveryInstance : deliveryInstances) {
-            OrderDailyFoodByMakersDto.FoodBySpot foodBySpot = new OrderDailyFoodByMakersDto.FoodBySpot();
-            Spot spot = deliveryInstance.getSpot();
+            deliveryMap.add(deliveryInstance.getDeliveryTime(), deliveryInstance);
+        }
+        for (LocalTime deliveryTime : deliveryMap.keySet()) {
+            List<DeliveryInstance> deliveryInstanceList = deliveryMap.get(deliveryTime);
+            for (DeliveryInstance deliveryInstance : deliveryInstanceList) {
+                OrderDailyFoodByMakersDto.FoodBySpot foodBySpot = new OrderDailyFoodByMakersDto.FoodBySpot();
+                Spot spot = deliveryInstance.getSpot();
 
-            foodBySpot.setDeliveryId(deliveryInstance.getDeliveryCode());
-            foodBySpot.setSpotType(GroupDataType.ofClass(Hibernate.getClass(spot)).getCode());
-            foodBySpot.setPickUpTime(DateUtils.timeToString(deliveryInstance.getPickUpTime()));
-            foodBySpot.setAddress1(spot.getAddress().addressToString());
-            foodBySpot.setAddress2(spot.getAddress().getAddress3());
-            foodBySpot.setSpotName(spot.getName());
-            foodBySpot.setGroupName(getGroupName(spot));
-            foodBySpot.setUserName(Hibernate.getClass(spot) == CorporationSpot.class ? null : deliveryInstance.getOrderItemDailyFoods().get(0).getOrder().getUser().getName());
-            foodBySpot.setPhone(Hibernate.getClass(spot) == CorporationSpot.class ? null : ((OrderDailyFood) Hibernate.unproxy(deliveryInstance.getOrderItemDailyFoods().get(0).getOrder())).getPhone());
-            foodBySpot.setFoods(toFood(Collections.singletonList(deliveryInstance)));
-            foodBySpot.setFoodCount(foodBySpot.getFoodCount());
-            foodBySpots.add(foodBySpot);
+                foodBySpot.setDeliveryId(deliveryInstance.getDeliveryCode());
+                foodBySpot.setSpotType(GroupDataType.ofClass(Hibernate.getClass(spot)).getCode());
+                foodBySpot.setDeliveryTime(DateUtils.timeToString(deliveryInstance.getDeliveryTime()));
+                foodBySpot.setAddress1(spot.getAddress().addressToString());
+                foodBySpot.setAddress2(spot.getAddress().getAddress3());
+                foodBySpot.setSpotName(spot.getName());
+                foodBySpot.setGroupName(getGroupName(spot));
+                foodBySpot.setUserName(Hibernate.getClass(spot) == CorporationSpot.class ? null : deliveryInstance.getOrderItemDailyFoods().get(0).getOrder().getUser().getName());
+                foodBySpot.setPhone(Hibernate.getClass(spot) == CorporationSpot.class ? null : ((OrderDailyFood) Hibernate.unproxy(deliveryInstance.getOrderItemDailyFoods().get(0).getOrder())).getPhone());
+                foodBySpot.setFoods(toFood(Collections.singletonList(deliveryInstance)));
+                foodBySpot.setFoodCount(foodBySpot.getFoodCount());
+                foodBySpots.add(foodBySpot);
+            }
         }
         foodBySpots = foodBySpots.stream()
-                .sorted(Comparator.comparing(OrderDailyFoodByMakersDto.FoodBySpot::getPickUpTime))
+                .sorted(Comparator.comparing(OrderDailyFoodByMakersDto.FoodBySpot::getDeliveryTime))
                 .toList();
         return foodBySpots;
     }
 
-    default List<OrderDailyFoodByMakersDto.FoodByDateDiningType> toFoodByDateDiningType(List<DeliveryInstance> deliveryInstances) {
+    default List<OrderDailyFoodByMakersDto.FoodByDateDiningType> toFoodByDateDiningType(List<DeliveryInstance> deliveryInstances, List<FoodCapacity> foodCapacities) {
         List<OrderDailyFoodByMakersDto.FoodByDateDiningType> foodByDateDiningTypes = deliveryInstances.stream()
                 .sorted(Comparator.comparing(DeliveryInstance::getServiceDate)
                         .thenComparing(DeliveryInstance::getDiningType))
@@ -181,6 +234,11 @@ public interface DeliveryInstanceMapper {
                     foodByDateDiningType.setTotalCount(entry.getValue().stream()
                             .map(DeliveryInstance::getItemCount)
                             .reduce(0, Integer::sum));
+                    LocalDateTime lastOrderTime = FoodUtils.getLastOrderTime(entry.getValue().get(0).getMakers(), entry.getKey().getValue(), entry.getKey().getKey(), foodCapacities);
+                    foodByDateDiningType.setLastOrderTime(DateUtils.localDateTimeToString(lastOrderTime));
+                    if(lastOrderTime.isAfter(LocalDateTime.now(ZoneId.of("Asia/Seoul")))) foodByDateDiningType.setBeforeLastOrderTime(false);
+                    foodByDateDiningType.setBeforeLastOrderTime(true);
+
                     return foodByDateDiningType;
                 })
                 .toList();
@@ -221,6 +279,86 @@ public interface DeliveryInstanceMapper {
         foodsList = foodsList.stream()
                 .sorted(Comparator.comparing(OrderDailyFoodByMakersDto.Foods::getFoodId)).toList();
         return foodsList;
+    }
+
+    @Transactional
+    default List<DeliveryInstanceDto> toScheduleDtos(List<DeliveryInfoDto> deliveryInfoDtos, List<DeliveryInstance> deliveryInstances) {
+        List<DeliveryInstanceDto> deliveryInstanceDtos = new ArrayList<>();
+        MultiValueMap<DeliveryInfoDto.Key, DeliveryInfoDto> deliveryInfoDtoMap = new LinkedMultiValueMap<>();
+        for (DeliveryInfoDto deliveryInfoDto : deliveryInfoDtos) {
+            deliveryInfoDtoMap.add(new DeliveryInfoDto.Key(deliveryInfoDto), deliveryInfoDto);
+        }
+        // 식사일정과 그룹이 같고, 메이커스만 다른 DeliveryInstance를 가져온다.
+        for (DeliveryInfoDto.Key key : deliveryInfoDtoMap.keySet()) {
+            List<DeliveryInfoDto> deliveryInfoDtoList = deliveryInfoDtoMap.get(key);
+            List<DeliveryInstance> selectedDeliveryInstances = deliveryInstances.stream()
+                    .filter(v -> v.getServiceDate().equals(key.getServiceDate()) &&
+                            v.getDiningType().equals(key.getDiningType()) &&
+                            v.getDeliveryTime().equals(key.getDeliveryTime()) &&
+                            v.getSpot().getGroup().equals(key.getGroup()))
+                    .toList();
+            if (selectedDeliveryInstances.isEmpty()) {
+                deliveryInstanceDtos.add(toScheduleDtoByDailyFood(Objects.requireNonNull(deliveryInfoDtoList)));
+                continue;
+            }
+            for (DeliveryInstance selectedDeliveryInstance : selectedDeliveryInstances) {
+                deliveryInfoDtoList.removeIf(v -> v.hasSameValue(selectedDeliveryInstance.getServiceDate(), selectedDeliveryInstance.getDiningType(), selectedDeliveryInstance.getSpot().getGroup(), selectedDeliveryInstance.getMakers(), selectedDeliveryInstance.getDeliveryTime()));
+            }
+            if(!deliveryInfoDtoList.isEmpty()) {
+                deliveryInstanceDtos.add(toScheduleDtoByDailyFood(Objects.requireNonNull(deliveryInfoDtoList)));
+            }
+            deliveryInstanceDtos.addAll(toScheduleDtoByDeliveryInstance(selectedDeliveryInstances));
+        }
+        return deliveryInstanceDtos;
+    }
+
+    default DeliveryInstanceDto toScheduleDtoByDailyFood(List<DeliveryInfoDto> deliveryInfoDto) {
+        Set<String> makersNames = deliveryInfoDto.stream()
+                .map(v -> v.getMakers().getName())
+                .collect(Collectors.toSet());;
+
+        return DeliveryInstanceDto.builder()
+                .id(generateTempId(deliveryInfoDto.get(0)))
+                .deliveryDate(DateUtils.localDateToString(deliveryInfoDto.get(0).getServiceDate()))
+                .diningType(deliveryInfoDto.get(0).getDiningType().getDiningType())
+                .deliveryTime(DateUtils.timeToString(deliveryInfoDto.get(0).getDeliveryTime()))
+                .groupName(deliveryInfoDto.get(0).getGroup().getName())
+                .makersNames(makersNames)
+                .driver(null)
+                .build();
+    }
+
+    default List<DeliveryInstanceDto> toScheduleDtoByDeliveryInstance(List<DeliveryInstance> deliveryInstances) {
+        return deliveryInstances.stream()
+                .collect(Collectors.groupingBy(
+                        deliveryInstance -> Optional.ofNullable(deliveryInstance.getDriver()),
+                        LinkedHashMap::new,
+                        Collectors.toList()
+                ))
+                .entrySet().stream()
+                .map(entry -> {
+                    List<DeliveryInstance> instances = entry.getValue();
+                    Set<String> makersName = instances.stream()
+                            .map(deliveryInstance -> deliveryInstance.getMakers().getName())
+                            .collect(Collectors.toSet());
+                    return DeliveryInstanceDto.builder()
+                            .id(instances.get(0).getId().toString())
+                            .deliveryDate(DateUtils.localDateToString(instances.get(0).getServiceDate()))
+                            .diningType(instances.get(0).getDiningType().getDiningType())
+                            .deliveryTime(DateUtils.timeToString(instances.get(0).getDeliveryTime()))
+                            .groupName(instances.get(0).getSpot().getGroup().getName())
+                            .makersNames(makersName)
+                            .driver(entry.getKey().isPresent() ? entry.getKey().get().getName() : null)
+                            .build();
+                }).toList();
+    }
+
+    default String generateTempId(DeliveryInfoDto deliveryInfoDto) {
+        return "temp"
+                + DateUtils.formatWithoutSeparator(deliveryInfoDto.getServiceDate())
+                + deliveryInfoDto.getDiningType().getCode() + deliveryInfoDto.getDeliveryTime().getHour()
+                + deliveryInfoDto.getDeliveryTime().getMinute()
+                + deliveryInfoDto.getGroup().getId() + "_1";
     }
 
     default String getGroupName(Spot spot) {
